fixed api issues

--- a/backend/.env
+++ b/backend/.env
@@ -5,6 +5,6 @@ SUPABASE_ACCESS_TOKEN=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZ
 PG_CONNECTION_STRING=postgresql://username:password@host:port/database
 DB_HOST=localhost
 DB_USER=ashishsharma
-DB_PASSWORD=
+DB_PASSWORD=Pass@1234
 DB_NAME=ai_coach_development
 DB_PORT=5432
