--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,80 @@
-# Logs
+# React / Frontend
+.DS_*
+**/*.backup.*
+**/*.back.*
+
+*.sublime*
+psd
+thumb
+sketch
+
+# Build outputs
+build/
+dist/
+.next/
+out/
+.cache/
+.parcel-cache/
+.svelte-kit/
+.vuepress/dist
+.nuxt
+.docusaurus
+
+# Dependencies
+node_modules/
+bower_components/
+jspm_packages/
+web_modules/
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
+.pnp.*
+.yarn-integrity
+
+# Logs and Debug
 logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
 lerna-debug.log*
+.pnpm-debug.log*
+.npm
+.nyc_output
+report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
-node_modules
-dist
-dist-ssr
-*.local
+# Temp and cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+.eslintcache
+.stylelintcache
+.grunt
+.lock-wscript
+.webpack/
+.fusebox/
+.serverless/
+.dynamodb/
+.tern-port
+.vscode-test
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# Typescript
+*.tsbuildinfo
 
+# REPL
+.node_repl_history
+
+# Env files
+.env
+.env.local
+.env.*.local
+
+# Output of npm/yarn pack
+*.tgz
+
+# SQLite or other DBs (if used)
+*.sqlite
+*.db
+*.sqlite3
