--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
-PG_CONNECTION_STRING=postgresql://username:password@host:port/database
-DB_HOST=tramway.proxy.rlwy.net
+PG_CONNECTION_STRING=postgresql://postgres:OSvzytkbjbAWwIumEWUynBcSoNhhBIee@tramway.proxy.rlwy.net:35676/ai_coach_development
+DB_HOST=tramway.proxy.rlwy.net:35676
 DB_USER=postgres
 DB_PASSWORD=OSvzytkbjbAWwIumEWUynBcSoNhhBIee
 DB_NAME=ai_coach_development
