--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,8 @@
 PG_CONNECTION_STRING=postgresql://postgres:OSvzytkbjbAWwIumEWUynBcSoNhhBIee@tramway.proxy.rlwy.net:35676/ai_coach_development
-DB_HOST=tramway.proxy.rlwy.net:35676
+DB_HOST=tpostgres.railway.internal
 DB_USER=postgres
-DB_PASSWORD=OSvzytkbjbAWwIumEWUynBcSoNhhBIee
+DB_PASSWORD=xeYpIiaOEdtPJWoKFDWZwzUwScAmeMrk
 DB_NAME=ai_coach_development
 DB_PORT=5432
 SERVER_PORT=3001
+DATABASE_URL=postgresql://postgres:xeYpIiaOEdtPJWoKFDWZwzUwScAmeMrk@nozomi.proxy.rlwy.net:53207/railway
