initial commit for fixing database

--- a/backend/.env
+++ b/backend/.env
@@ -5,4 +5,4 @@ DB_PASSWORD=xeYpIiaOEdtPJWoKFDWZwzUwScAmeMrk
 DB_NAME=ai_coach_development
 DB_PORT=5432
 SERVER_PORT=3001
-DATABASE_URL=postgresql://postgres:xeYpIiaOEdtPJWoKFDWZwzUwScAmeMrk@nozomi.proxy.rlwy.net:53207/railway
+DATABASE_URL=postgresql://postgres:uiAsnqCJYSyygGbMZiKKDuCBTsbFiwIu@metro.proxy.rlwy.net:30417/railway
