changed server and database

--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,7 @@
-PG_CONNECTION_STRING=postgresql://postgres:OSvzytkbjbAWwIumEWUynBcSoNhhBIee@tramway.proxy.rlwy.net:35676/ai_coach_development
-DB_HOST=tpostgres.railway.internal
+DB_HOST=postgres.railway.internal
 DB_USER=postgres
-DB_PASSWORD=xeYpIiaOEdtPJWoKFDWZwzUwScAmeMrk
+DB_PASSWORD=uiAsnqCJYSyygGbMZiKKDuCBTsbFiwIu
 DB_NAME=ai_coach_development
 DB_PORT=5432
 SERVER_PORT=3001
-DATABASE_URL=postgresql://postgres:uiAsnqCJYSyygGbMZiKKDuCBTsbFiwIu@metro.proxy.rlwy.net:30417/railway
+DATABASE_URL=postgresql://postgres:drNRmvoTZNcsOSQbdbWxbGxDKkWxKnzH@yamabiko.proxy.rlwy.net:27528/railway
