--- a/backend/.env
+++ b/backend/.env
@@ -4,4 +4,4 @@ DB_PASSWORD=uiAsnqCJYSyygGbMZiKKDuCBTsbFiwIu
 DB_NAME=ai_coach_development
 DB_PORT=5432
 SERVER_PORT=3001
-DATABASE_URL=postgresql://postgres:drNRmvoTZNcsOSQbdbWxbGxDKkWxKnzH@yamabiko.proxy.rlwy.net:27528/railway
+DATABASE_PUBLIC_URL=postgresql://postgres:drNRmvoTZNcsOSQbdbWxbGxDKkWxKnzH@yamabiko.proxy.rlwy.net:27528/railway
