--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.2.1",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.344.0",
     "pg": "^8.16.2",
     "react": "^18.3.1",
