--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
+    "jsonwebtoken": "^9.0.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-facebook": "^3.0.0",
+    "express-session": "^1.17.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.344.0",
     "pg": "^8.16.2",
